[Signin][Modularization] Move SigninPromoUtil to signin.ui target
This CL moves SigninPromoUtil and its unit tests to signin.ui target.

Bug: 1166173
Change-Id: If4862e6cef999ee52cf85903b6624813d2aa6263
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2642695
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Alice Wang <aliceywang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#847095}